--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,1 @@
-body {
-  overflow-x: hidden; /* Prevent horizontal scrolling */
-}
-
 @import "./styles/fonts.scss";
